--- a/templates/login.html
+++ b/templates/login.html
@@ -16,7 +16,7 @@
                 <li><a href="login.html">Login</a></li>
               </ul>
         </nav>
-            <form class="box" action="dashboard.html" method="post">
+            <form class="box" action="dashboard.html" method="">
                 <h1>Login</h1>
                 <input type="text" name="" placeholder="Email" required>
                 <input type="password" name="" placeholder="Password" required>
