--- a/templates/register.html
+++ b/templates/register.html
@@ -16,7 +16,7 @@
                 <li><a href="login.html">Login</a></li>
               </ul>
         </nav>
-            <form class="box" action="login.html" method="post">
+            <form class="box" action="login.html" method="">
                 <h1>Sign Up</h1>
                 <input type="text" name="" placeholder="Name" required>
                 <input type="text" name="" placeholder="Email" required>
