--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -1,22 +1,99 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>ak mobiles</title>
+       
 
         <link rel="stylesheet" href="../static/css/stylesheet.css">  
        
     </head>
+    <style>
+        table, th, td {
+        border: 1px solid black;
+        border-collapse: collapse;
+        }
+        h1
+        {
+        background-color:darkgray;
+     
+        }
+
+
+        </style>
     <body>
-        <nav>
-            <h1 class="logo">mi mobiles</h1>
-            <ul>
-                <li><a class="active" href="../index.html">Home</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Services</a></li>
-                <li><a href="#">Contact</a></li>
-                <li><a href="login.html">Login</a></li>
-              </ul>
-        </nav>
-        <h1>This is dashboard</h1>
+        <h2 style="text-align: center;color:crimson;font-size: 35px;">Resume</h2>
+        <hr>
+        <div class="res">
+        <img src="../static/images/gokul.jpg" style=" width: 10%; margin-right: 20px; float: right;">
+        <address style="font-size: 20px;margin: 30px;">
+            GOKUL D<br>
+             B.E – Computer Science and Engineering,<br>                                               
+              Adhiyamaan College of Engineering, <br>
+              Hosur.<br>
+              0123456789<br>
+              warner.gokul@gmail.com<br>
+
+             </address>
+             </div>
+             <hr>
+             <h1 style="font-size: 30px;margin: 20px;padding: 10px;">CAREER OBJECTIVE</h1>
+             <p style="font-size: 25px;margin:20px;padding: 10px;">To obtain employment with a company that offers a positive atmosphere to learn and implement new skills and technologies of the betterment of the organizations.</p>
+             <hr>
+             <h1 style="font-size: 30px;margin: 20px;padding: 10px;">ACADEMIC OBJECTIVE</h1>
+             <table style="padding: 10px;margin: 20px;width:200px;height: 60;">
+              <tr>
+                  <th>COURSE</th>
+                  <th>INSTITUTION </th>
+                  <th>YEAR OF PASSING</th>
+                  <th>PERCENTAGE</th>
+              </tr>
+              <tr>
+                  <td>B.E (CSE)</td>
+                  <td>Adhiyamaan College of Engineering</td>
+                  <td>2017-2021</td>
+                  <td>84.0</td>
+                  </tr>
+                  <tr>
+                  <td>HSC</td>
+                  <td>Sri Vijaya Vidyalaya Mrt. Hr. Sec. School</td>
+                  <td>2017</td>
+                  <td>81.0</td>
+                  </tr>
+                  <tr>
+                  <td>SSLC</td>
+                  <td>Sri Vijaya Vidyalaya Mrt. Hr. Sec. School</td>
+                  <td>2015</td>
+                  <td>93.0</td>
+                  </tr>              
+             </table>
+             <hr>
+             <h1 style="font-size: 30px;margin: 20px;padding: 10px;">WORKSHOP </h1>
+             <ul style="font-size: 25px;margin: 20px;padding: 10px;">
+                 <li>“Core Java” by Udemy certificate"</li>
+                 <li>“Basic Data Structures” by  Udemy certificate"</li>
+             </ul>
+             <hr>
+             <h1 style="font-size: 30px;margin: 20px;padding: 10px;">Academic project</h1>
+             <p style="font-size: 25px;margin: 20px;padding: 10px;">Locust detection using IOT</p>
+             <hr>
+             <h1 style="font-size: 30px;margin: 20px;padding: 10px;">PROFESSIONAL SKILLS</h1>
+             <ul style="font-size: 25px;margin: 20px;padding: 10px;">
+                 <li>C</li>
+                 <li>C++</li>
+                 <li>Java</li>
+                 <li>MYSQL</li>
+                 <li>DBMS</li>
+             </ul>
+             <hr>
+             <h1 style="font-size: 30px;margin: 20px;padding: 10px;">INTERPERSONAL SKILLS</h1>
+             <ul style="font-size: 25px;margin: 20px;padding: 10px;">
+                 <li>Easily adapte to  any kind of situation</li>
+                 <li>Patience and Responsibility</li>
+                 <li>Self-motivator</li>
+             </ul>
+             <hr>
+             <h1 style="font-size: 30px;margin: 20px;padding: 10px;">DECLARATION</h1>
+             <p style="font-size: 30px;margin: 20px;padding: 10px;">I hereby declare that all the details furnished above information is true to the best of my knowledge and belief.</p>
+             <p style="font-size: 30px;margin: 20px;padding: 10px;">Date:17.04.2021	<br>						
+                Place: Hosur  <br><br>      (GOKUL.D)	</p>
     </body>
     </html>
